--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     Projects
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Pacman Exercise</a>
-                    <a class="dropdown-item" href="#">Eye Exercise</a>
-                    <a class="dropdown-item" href="#">Map Exercise</a>
+                    <a class="dropdown-item" href="https://raajvyas.github.io/pacman/">PacMen Exercise</a>
+                    <a class="dropdown-item" href="https://raajvyas.github.io/eyes/">Eye Exercise</a>
+                    <a class="dropdown-item" href="https://raajvyas.github.io/maps/">Real Time Bus Tracker</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Hagman 1.0</a>
+                    <a class="dropdown-item" href="https://raajvyas.github.io/hangman/">Hagman 1.0</a>
                   </div>
                 </li>
               </ul>
