--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="https://raajvyas.github.io/pacman/">PacMen Exercise</a>
                     <a class="dropdown-item" href="https://raajvyas.github.io/eyes/">Eye Exercise</a>
-                    <a class="dropdown-item" href="https://raajvyas.github.io/maps/">Real Time Bus Tracker</a>
+                    <a class="dropdown-item" href="https://raajvyas.github.io/map/">Real Time Bus Tracker</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="https://raajvyas.github.io/hangman/">Hagman 1.0</a>
                   </div>
