--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="dropdown-item" href="https://raajvyas.github.io/eyes/">Eye Exercise</a>
                     <a class="dropdown-item" href="https://raajvyas.github.io/map/">Real Time Bus Tracker</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://raajvyas.github.io/hangman/">Hagman 1.0</a>
+                    <a class="dropdown-item" href="https://raajvyas.github.io/hangman/">Hangman 1.0</a>
                   </div>
                 </li>
               </ul>
