--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Raaj's Portfolio</title>
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <!-- Navigation bar-->
@@ -20,7 +22,7 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">Projects Page</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -44,16 +46,31 @@
 
         <!--Container-->
         <div class="container">
-            <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/f2JuY0gA0N0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card body.
+            <div class="row">
+                <div class="col-4">
+                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/f2JuY0gA0N0" title="Introduction" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="col">
+                   <p> Hi, My name is Raaj. I am a Senior Product Manager at Amazon and I drive CX improvements for our retail home improvement category. My background is in software development but I've been slightly out of touch with programming. Passion for coding got me to this boot camp and I look forward to learning more.</p>
+                   <p> Outside of work, I like to play cricket and I enjoy going on road trips. I have driven all along the west coast in the US from Seattle to San Diego. </p>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                   <img src="./IMG_1190.JPG" title="Image"/>
+                </div>
+                <div class="col">
 
+                </div>
+            </div>
+        </div>
+        <div class="card">
+                <div class="card-body">
+                    This is some text within a card body.
+                </div>
+        </div>
         <!-- Javascript and Dependencies-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
