--- a/index.html
+++ b/index.html
@@ -59,17 +59,19 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                   <img src="./IMG_1190.JPG" title="Image"/>
+                    <div class="card" style="width: 18rem; vertical-align: bottom;">
+                        <div class="card-body">
+                            <h5 class="card-title">About me</h5>
+                            <ul><a href="https://raajvyas.github.io/" class="card-link">GitHub</a></ul>
+                            <ul><a href="https://www.linkedin.com/feed/" class="card-link">LinkedIn<a></ul>       
+                            <ul><a href="mailto:test@gmail.com" class="card-link">Contact me</a></ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="col">
-
+                   <img src="./IMG_1190.jpeg" title="Image"/>
                 </div>
             </div>
-        </div>
-        <div class="card">
-                <div class="card-body">
-                    This is some text within a card body.
-                </div>
         </div>
         <!-- Javascript and Dependencies-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
