--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="col">
-                   <img src="./IMG_1190.jpeg" title="Image"/>
+                   <img src="IMG_1190.jpeg" title="Image"/>
                 </div>
             </div>
         </div>
