--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 <div class="col">
                     <div class="card" style="width: 18rem; vertical-align: bottom;">
                         <div class="card-body">
-                            <h5 class="card-title">About me</h5>
+                            <h5 class="card-title">More about me</h5>
                             <ul><a href="https://raajvyas.github.io/" class="card-link">GitHub</a></ul>
                             <ul><a href="https://www.linkedin.com/feed/" class="card-link">LinkedIn<a></ul>       
-                            <ul><a href="mailto:test@gmail.com" class="card-link">Contact me</a></ul>
+                            <ul><a href="mailto:raajhvyas@gmail.com" class="card-link">Contact info</a></ul>
                         </div>
                     </div>
                 </div>
