--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="col">
-                   <img src="./IMG_1190.jpeg" title="Image">
+                   <img src="./IMG_1190.JPG" title="Image>
                 </div>
             </div>
         </div>
