--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="col">
-                   <img src="./IMG_1190.JPG" title="Image>
+                   <img src="./IMG_1190.JPG" title="Image"/>
                 </div>
             </div>
         </div>
