--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="card" style="width: 18rem; vertical-align: bottom;">
                         <div class="card-body">
                             <h5 class="card-title">More about me</h5>
-                            <ul><a href="https://raajvyas.github.io/" class="card-link">GitHub</a></ul>
+                            <ul><a href="https://github.com/raajvyas" class="card-link">GitHub</a></ul>
                             <ul><a href="https://www.linkedin.com/feed/" class="card-link">LinkedIn<a></ul>       
                             <ul><a href="mailto:raajhvyas@gmail.com" class="card-link">Contact info</a></ul>
                         </div>
